<resources>
    <string name="app_name">DRAG</string>
    <string name="dr">DR</string>
    <string name="ag">AG</string>
    <string name="login">Login</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="password_again">Enter Password again</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="discover">Discover</string>
    <string name="details">Details</string>
    <string name="moments">Moments</string>
    <string name="your_profile">Your Profile</string>
    <string name="name">Name</string>
    <string name="your_name">Your Name</string>
    <string name="your_e_mail">Your E-Mail</string>
    <string name="title">Title</string>
    <string name="username">Lori, Susan</string>
    <string name="posttime">4:30 PM</string>
    <string name="here_will_be_the_description">Here will be the description.</string>
    <string name="social_event">Social Event</string>
    <string name="profile">Profile</string>
    <string name="appUsage">App Usage</string>
    <string name="dayAppUsage">Day</string>
    <string name="weekAppUsage">Week</string>
    <string name="monthAppUsage">Month</string>
    <string name="yearAppUsage">Year</string>
    <string name="lastTimeUsed">Last Time Used</string>
    <string name="visible">Total Time Visible</string>
    <string name="fillerString">0:00</string>
    <string name="countUsage">Number of use</string>

    <!-- Onboarding -->
    <string name="onboarding">Onboarding</string>
    <string name="onboarding1">1/3</string>
    <string name="onboarding2">2/3</string>
    <string name="onboarding3">3/3</string>
    <string name="location">Location</string>
    <string name="locationQuestion">Where is your home location?</string>
    <string name="nameQuestion">What should your user name be?</string>
    <string name="uploadAPhoto">Upload a photo.</string>
    <string name="eventQuestion">What do you want to do in your leisure time?</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="party">Party</string>
    <string name="sport">Sport</string>
    <string name="food">Food</string>
    <string name="books">Books</string>
    <string name="movies">Movies</string>
    <string name="culture">Culture</string>
    <string name="arts">Arts</string>
    <string name="inputusername">Username</string>
    <string name="compose">COMPOSE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="compose_layout">Compose</string>
    <string name="post">post</string>
    <string name="add_picture">add picture</string>
    <string name="todo">TODO</string>
    <string name="event">Micro Task</string>
</resources>