<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.appUsage.AppUsage">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/darker_green"
            app:title="@string/appUsage"
            app:titleTextColor="@color/black" />


        <LinearLayout
            android:id="@+id/appUsageViewButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topAppBar">

            <Button
                android:id="@+id/dailyButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="110dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/light_green"
                android:text="@string/dayAppUsage"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/weeklyButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="110dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light_green"
                android:text="@string/weekAppUsage"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/monthlyButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="110dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light_green"
                android:text="@string/monthAppUsage"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/yearlyButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="110dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light_green"
                android:text="@string/yearAppUsage"
                android:textColor="@color/black" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/appUsage_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background" />

    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>